--- a/notes/01_pca/0_dim.tex
+++ b/notes/01_pca/0_dim.tex
@@ -35,7 +35,7 @@ Our entire dataset:
 We want to reduce the number of elements in $\vec x \in \R^N$
 while retaining as most of the intrinsic information content.
 
-\question{For what purpose?}
+\question{For what purpose?}\\
 
 \question{What is the difference between dimensionality reduction and compression, if any?}
 
@@ -65,7 +65,7 @@ while retaining as most of the intrinsic information content.
 	}
 	%\end{table}
 \end{minipage}
-\begin{minipage}{0.33\textwidth}
+\begin{minipage}{\slidesonly{0.33}\notesonly{0.15}\textwidth}
 	\begin{center}
 		\includegraphics[width=0.99\textwidth]{img/telephone_masts_depth}%
 	\end{center}
@@ -80,6 +80,7 @@ while retaining as most of the intrinsic information content.
 	$x_3$     & 2.5                            & 7.2                            &                       & -0.8      \\ %\cline{1-1}
 	  \vdots        &            \vdots                    &     \vdots                          & \begin{tabular}[c]{@{}c@{}}\ldots\vspace{2.5mm}\end{tabular} &      \vdots     \\ %\cline{1-1}
 	$x_{N-2}$ & -7.1                           & -3.5                           &                       & 7.0       \\ \cline{1-1}
+	\slidesonly{
 	\only<1>{
 	$x_{N-1}$ & -10.3                          & -0.3                           &                       & 4.5       \\ \cline{1-1}
 	$x_N$     & 4.0                            & 1.3                            &                       & 6.6       \\ \hline
@@ -88,6 +89,7 @@ while retaining as most of the intrinsic information content.
 	%\hline{\vspace{\dimexpr 2.2ex-\doublerulesep}}
 	$\hcancel[red]{x_{N-1}}$ &          \textcolor{red}{?}             &          \textcolor{red}{?}             &                    &    \textcolor{red}{?}   \\ \cline{1-1}
 	$\hcancel[red]{x_{N}}$     &                      \textcolor{red}{?}        &               \textcolor{red}{?}            &                   & \textcolor{red}{?}      \\ \hline
+	}
 	}
 	\only<4->{
 	%\hline{\vspace{\dimexpr 2.2ex-\doublerulesep}}
@@ -143,7 +145,9 @@ Let
 \slidesonly{\vspace{-5mm}}
 \begin{itemize}
 \item[]$\vec x \in \R^N$,\\
-\item[] w.l.o.g. $\E[\vec x] \eqexcl \vec 0$ (i.e. for each variable $x_i$ its mean $m_i = \sum_{\alpha=1}^{p} x_i^{(\alpha)} \eqexcl 0$)
+\item[] w.l.o.g. $\E[\vec x] \eqexcl \vec 0$ \notesonly{\\
+
+}(i.e. for each variable $x_i$ its mean $m_i = \sum_{\alpha=1}^{p} x_i^{(\alpha)} \eqexcl 0$)
 \end{itemize}
 
 \pause
