figure for slides only

--- a/notes/01_pca/2_apply-pca.tex
+++ b/notes/01_pca/2_apply-pca.tex
@@ -51,11 +51,11 @@ PCA boils down to solving the eigenvalue problem.
 We bascially need a routine with which to solve the eigenvalue problem. 
 }
 \pause
-
+\slidesonly{
     \begin{center}
 		\includegraphics[width=5cm]{img/meme_eig}
     \end{center}
-    
+    }
 \pause
 
 For python, the obvious choice is to use a routine like \textit{numpy.linalg.eig(A)}. \emph{Watch out for how to interpret the output.}
