prefix section numbers with sheet number

--- a/latex/minotes.cls
+++ b/latex/minotes.cls
@@ -2,13 +2,22 @@
 \ProvidesClass{minotes}[2019/02/09 0.1]
 
 % packages and classes, scrartcle is an extended article 
-\LoadClass[a4paper]{scrartcl}
+%\LoadClass[a4paper]{scrbook}  % has chapters but needs formatting
+\LoadClass[a4paper]{scrartcl} % doesn't have chapters - see workaround
 \usepackage{etex}
 \RequirePackage{scrlayer-scrpage, times, amsmath, amssymb, bm}
 \RequirePackage{etoolbox, comment} % not ifthen, xstring, 
 \RequirePackage[latin9]{inputenc}
 \RequirePackage[T1]{fontenc}
 \usepackage{hyperref}
+\hypersetup{
+  colorlinks   = true, %Colours links instead of ugly boxes
+%  urlcolor     = black, %Colour for external hyperlinks
+%  linkcolor    = black, %Colour of internal links
+%  citecolor   = black %Colour of citations
+}
+\usepackage{xstring} % for replace string command
+\usepackage{titlesec}
 \usepackage[overlay,absolute]{textpos}
 \usepackage{enumerate}
 \RequirePackage{graphics,graphicx}
@@ -25,7 +34,6 @@
 \usepackage{xcolor,cancel}
 \usepackage{soul} % for strikethrough
 
-
 \setlength{\oddsidemargin}{0.25 in}
 \setlength{\evensidemargin}{-0.25 in}
 \setlength{\topmargin}{-0.9 in}
@@ -35,22 +43,17 @@
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{1ex plus 0.5ex minus 0.2ex}
 
+% TOC - BEGIN
+\RedeclareSectionCommand[tocnumwidth=3.0em]{section}
+\RedeclareSectionCommand[tocnumwidth=3.5em]{subsection}
+\RedeclareSectionCommand[tocnumwidth=4.0em]{subsubsection}
+% TOC - END
+
 % Update the following presets
 % presets - BEGIN
 \newcommand{\coursetitle}{Machine Intelligence 2}
 \newcommand{\authorname}{Kashef}
 % presets - END
-
-% Custom referencing - BEGIN
-% Use custom text for sections, figures and equations
-\let\oldeqref\eqref
-\renewcommand{\eqref}[1]{Eq. \hspace{-1.0mm}\oldeqref{#1}}
-
-\newcommand{\figref}[1]{Fig. \hspace{-0.5mm}\ref{#1}}
-\newcommand{\figureref}[1]{Figure \hspace{-0.5mm}\ref{#1}}
-
-\newcommand{\sectionref}[1]{Section \hspace{-1.0mm}\ref{#1}}
-% Custom referencing - END
 
 % The sheet number has to be set before \maketitle
 % access it via \thesheetno throughout the document
@@ -64,6 +67,27 @@
 	\rule{\textwidth}{1pt}%
 	\vspace{0.5cm}
 }
+\newcommand{\sectionprefix}{T} % check width in toc
+\renewcommand*{\thesection}{
+%\sectionprefix
+\thesheetno.\arabic{section}}
+%\def\ReplaceStr#1{%
+  %\IfSubStr{#1}{\sectionprefix}{%
+    %\StrSubstitute{#1}{\sectionprefix}{}}{#1}}
+%\titleformat{\section}
+  %{\normalfont\Large\bfseries\filcenter}{T\thesection}
+  %{0em}{}
+    
+% Custom referencing - BEGIN
+% Use custom text for sections, figures and equations
+\let\oldeqref\eqref
+\renewcommand{\eqref}[1]{Eq. \hspace{-1.0mm}\oldeqref{#1}}
+
+\newcommand{\figref}[1]{Fig. \hspace{-0.5mm}\ref{#1}}
+\newcommand{\figureref}[1]{Figure \hspace{-0.5mm}\ref{#1}}
+
+\newcommand{\sectionref}[1]{Section \hspace{-1.0mm}\ref{#1}}
+% Custom referencing - END
 
 % first page
 \deftriplepagestyle{plain}[0pt]
@@ -85,11 +109,13 @@
 \newcommand{\question}[2]{%
 	\addtocounter{question}{1}% otherwise counter starts at zero
 	\vspace{4mm}%
-	{Q\thesheetno.\thesection.\arabic{question}: ~ \textit{#1}%
+	%{Q\ReplaceStr{\thesection}.\arabic{question}: ~ \textit{#1}%
+	{Q\thesection.\arabic{question}: ~ \textit{#1}%
 	}\\
 	\vspace{5mm}%
 }
 % Questions - END
+
 
 % -----------------------------------------------------------------------------
 
