--- a/notes/02_online-pca/tutorial.tex
+++ b/notes/02_online-pca/tutorial.tex
@@ -39,6 +39,8 @@
 
 \begin{document} %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%\chapter{T\sheetnum} % doesn't work with scrartcl
+
 \sheet{\sheetnum}{\tutorialtitleshort}
 
 \ttopic{\tutorialtitle}
