remove unused toc settings

--- a/latex/minotes.cls
+++ b/latex/minotes.cls
@@ -50,8 +50,8 @@
 \RedeclareSectionCommand[tocnumwidth=4.0em]{subsubsection}
 % Spacing between section and text
 % Syntax: \titlespacing*{<command>}{<left>}{<before-sep>}{<after-sep>}
-\titlespacing*{\subsection}{0cm}{1cm}{0.5cm}
-\titlespacing*{\section}{0cm}{1cm}{1cm}
+%\titlespacing*{\subsection}{0cm}{1cm}{0.5cm}
+%\titlespacing*{\section}{0cm}{1cm}{1cm}
 
  %ENDNOTENLAYOUT%
 %\renewcommand\enoteformat{\noindent\setlength\hangindent{0.5cm}\makebox[0.5cm][l]{\theenmark\,}}
@@ -62,7 +62,7 @@
   %\titlespacing*{\section}{0cm}{3\baselineskip}{1\baselineskip}%
 %}{}{\PatchFailed}
 %\renewcommand{\notesname}{\normalsize\textit{Notes}}
-\let\footnote=\endnote
+%\let\footnote=\endnote
 % TOC - END
 
 % Update the following presets
