--- a/notes/02_online-pca/0_hebbian.tex
+++ b/notes/02_online-pca/0_hebbian.tex
@@ -113,7 +113,7 @@ A large value of $y$ means that the network ``recognizes'' the stimulus $\vec x$
 \item Applicable to non-stationary data.
 \item More importantly, a single linear neuron 
 can organize itself such that its synaptic weights converge to a filter 
-for the \slidesonly{first PC}\notesonly{\emph{first principle component}} (Oja, 1982).
+for the \slidesonly{first PC}\notesonly{\emph{first principle component}} \citep{oja1982simplified}.
 
 \pause
 
