--- a/notes/02_online-pca/bibliography.bib
+++ b/notes/02_online-pca/bibliography.bib
@@ -1,29 +1,11 @@
-@book{sutton1998introduction,
-  title={Introduction to reinforcement learning},
-  author={Sutton, Richard S and Barto, Andrew G and others},
-  volume={135},
-  year={1998},
-  publisher={MIT press Cambridge}
-}
-@Book{Bertsekas07,
-  author = 	 {D. P. Bertsekas},
-  title = 	 {Dynamic Programming and Optimal Control},
-  publisher ={Athena Scientific},
-  year = 	 {2007},
-  volume = 	 {2},
-  edition =  {3rd},
-  url = {http://www.control.ece.ntua.gr/UndergraduateCourses/ProxTexnSAE/Bertsekas.pdf}
-}
-@Article{Watkins92,
-  author = 	 {C. Watkins and P. Dayan},
-  title = 	 {Q-learning},
-  journal = 	 {Machine Learning},
-  year = 	 {1992},
-  OPTkey = 	 {},
-  volume = 	 {8},
-  OPTnumber = 	 {},
-  pages = 	 {279--292},
-  OPTmonth = 	 {},
-  OPTnote = 	 {},
-  OPTannote = 	 {}
+@article{oja1982simplified,
+  title={Simplified neuron model as a principal component analyzer},
+  author={Oja, Erkki},
+  journal={Journal of mathematical biology},
+  volume={15},
+  number={3},
+  pages={267--273},
+  year={1982},
+  publisher={Springer},
+  url = {http://jeti.uni-freiburg.de/studenten_seminar/term_paper_WS_16_17/Oja.pdf}
 }
