--- a/notes/02_online-pca/tutorial.tex
+++ b/notes/02_online-pca/tutorial.tex
@@ -85,12 +85,12 @@
 \input{./2_apply-online-pca}
 \mode*
 
-%\section{References}
-%\begin{frame}[allowframebreaks] \frametitle{References}
-	%\scriptsize
-	%\bibliographystyle{plainnat}
-	%\bibliography{bibliography}
-%\end{frame}
+\section{References}
+\begin{frame}[allowframebreaks] \frametitle{References}
+	\scriptsize
+	\bibliographystyle{plainnat}
+	\bibliography{bibliography}
+\end{frame}
 
 \end{rightcolumn}
 \end{paracol}
