--- a/notes/02_online-pca/2_apply-online-pca.tex
+++ b/notes/02_online-pca/2_apply-online-pca.tex
@@ -207,7 +207,8 @@ $\Bigg|$
 
 \pause
 
-- staionarity of the data, can I fit all the data into memory?
+- staionarity of the data\\
+- can I fit all the data into memory?
 
 
 \end{frame}
