--- a/notes/03_kernel-pca/tutorial.tex
+++ b/notes/03_kernel-pca/tutorial.tex
@@ -62,7 +62,39 @@
 \newpage
 
 \mode<all>
-\input{./1_kernel-pca}
+\input{./0_recap}
+\mode*
+
+\clearpage
+
+
+\mode<all>
+\input{./1_nonlin}
+\mode*
+
+\clearpage
+
+
+\mode<all>
+\input{./2_trick}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./3_kpca}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./4_centering}
+\mode*
+
+\clearpage
+
+\mode<all>
+\input{./5_apply}
 \mode*
 
 \clearpage
