--- a/notes/03_kernel-pca/0_recap.tex
+++ b/notes/03_kernel-pca/0_recap.tex
@@ -17,11 +17,26 @@
 \pause
  
 \item Eigenvalue problem: $\vec C\,\vec e = \lambda \vec e$
-\item \underline{limited to linear correlations}
+\item limited to \underline{linear} correlations
 \end{itemize}
+
+
+\begin{center}
+	\includegraphics[width=0.5\textwidth]{img/scatter}%
+	\captionof{figure}{linear vs. non-linear correlations}
+\end{center}
 
 Kernel PCA for finding non-linear features.\\
 
+
+\end{frame}
+
+\begin{frame}\frametitle{What is Kernel PCA about?}
+
 Don't panic! Kernel PCA is essentially standard linear PCA applied to a non-linearly transformed version of the data.
+
+\begin{center}
+	\includegraphics[width=0.3\textwidth]{img/koffer}%
+\end{center}
 
 \end{frame}
