--- a/notes/03_kernel-pca/2_trick.tex
+++ b/notes/03_kernel-pca/2_trick.tex
@@ -41,6 +41,17 @@ $\vec K$ (without the ``\textasciitilde'') denotes the normalized or ``centered'
 
 \end{frame}
 
+\subsubsection{Properties of the Kernel matrix}
+
+\begin{frame}\frametitle{\subsubsecname}
+
+\begin{block}{From Mercer's theorem}
+Every positive semidefinite kernel k corresponds to a scalar product in
+some metric feature space.
+\end{block}
+
+\end{frame}
+
 \begin{frame}\frametitle{The RBF Kernel}
 
 The Radial Basis function (RBF) 
