add note on svd vs eig

--- a/notes/01_pca/bibliography.bib
+++ b/notes/01_pca/bibliography.bib
@@ -1,29 +1,11 @@
-@book{sutton1998introduction,
-  title={Introduction to reinforcement learning},
-  author={Sutton, Richard S and Barto, Andrew G and others},
-  volume={135},
-  year={1998},
-  publisher={MIT press Cambridge}
-}
-@Book{Bertsekas07,
-  author = 	 {D. P. Bertsekas},
-  title = 	 {Dynamic Programming and Optimal Control},
-  publisher ={Athena Scientific},
-  year = 	 {2007},
-  volume = 	 {2},
-  edition =  {3rd},
-  url = {http://www.control.ece.ntua.gr/UndergraduateCourses/ProxTexnSAE/Bertsekas.pdf}
-}
-@Article{Watkins92,
-  author = 	 {C. Watkins and P. Dayan},
-  title = 	 {Q-learning},
-  journal = 	 {Machine Learning},
-  year = 	 {1992},
-  OPTkey = 	 {},
-  volume = 	 {8},
-  OPTnumber = 	 {},
-  pages = 	 {279--292},
-  OPTmonth = 	 {},
-  OPTnote = 	 {},
-  OPTannote = 	 {}
+@article{bro2008resolving,
+  title={Resolving the sign ambiguity in the singular value decomposition},
+  author={Bro, Rasmus and Acar, Evrim and Kolda, Tamara G},
+  journal={Journal of Chemometrics: A Journal of the Chemometrics Society},
+  volume={22},
+  number={2},
+  pages={135--140},
+  year={2008},
+  publisher={Wiley Online Library},
+  url={https://prod-ng.sandia.gov/techlib-noauth/access-control.cgi/2007/076422.pdf}
 }
